# testing

./: Cargo.toml  LICENSE
.github/workflows/: build.yml
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
proc_macro/src/tests/: mod.rs
src/: lib.rs  macros.rs
tests/sgx/: Cargo.toml
tests/sgx/app/: Cargo.toml
tests/sgx/cmake/: git.cmake  sgx.cmake
tests/sgx/enclave/: Cargo.toml
tests/sgx/hello-world/: Cargo.toml
tests/sgx/hello-world/src/: lib.rs
