[package]
name = "testing"
version = "0.2.0"
authors = ["sammyne xiangminli@alumni.sjtu.edu.cn"]
description = "Teaclave test utility"
license-file = "Apache-2.0"
edition = "2018"
publish = false

[features]
default = ["sgx"]
sgx = ["sgx_tstd"]

[dependencies]
inventory           = "=0.1.10"
testing_proc_macro  = { path = "proc_macro" }

[dependencies.inventory-impl]
package = "inventory-impl-for-testonly"
path    = "third_party/inventory-impl-for-testonly"

[dependencies.sgx_tstd]
features  = ["backtrace"]
optional  = true
version   = "1.1.3"
